# gun-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: yolo_model.ipynb
scripts/: app.py  detect.py  preprocess.py  preprocessing.py  train.py
