[project]
name = "gun-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "ultralytics>=8.4.11",
]
