[project]
name = "gun-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.5.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "ultralytics>=8.4.11",
]
